# ba_military_aircraft_detection

./: .gitattributes  .gitignore  README.md  data_analysis.ipynb  data_preparation.ipynb  data_visualization.ipynb  helper_functions.ipynb  metrics_3.csv  model_training.ipynb  model_validation_testing.ipynb  pyproject.toml  requirements.txt
data/: .gitkeep
deploy-demo/: app.py  pyproject.toml
deploy-demo/.gradio/cached_examples/20/: log.csv
deploy-demo/weights/: model-l.pt  model-m.pt  model-n.pt  model-s.pt  model-x.pt
runs/obb/runs/train/model_l-with-classweights/: args.yaml  results.csv
runs/obb/runs/train/model_l-with-classweights/weights/: best.pt  last.pt
runs/obb/runs/train/model_m-with-classweights/: args.yaml  results.csv
runs/obb/runs/train/model_m-with-classweights/weights/: best.pt  last.pt
runs/obb/runs/train/model_m-without-classweights/: args.yaml  results.csv
runs/obb/runs/train/model_m-without-classweights/weights/: best.pt  last.pt
runs/obb/runs/train/model_n-max/: args.yaml  results.csv
runs/obb/runs/train/model_n-max/weights/: best.pt  last.pt
runs/obb/runs/train/model_n-with-classweights/: args.yaml  results.csv
runs/obb/runs/train/model_n-with-classweights/weights/: best.pt  last.pt
runs/obb/runs/train/model_n-without-classweights/: args.yaml  results.csv
runs/obb/runs/train/model_x-with-classweights/: args.yaml  results.csv
vlm/: requirements_vlm.txt  vlm_classification.ipynb  vlm_index.json  vlm_results.json  vlm_results_collage.json  vlm_results_fewshot.json
(+4 files in other folders)
