[project]
name = "ba-military-aircraft-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "git-filter-repo>=2.47.0",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.80",
]

[tool.uv.workspace]
members = [
    "deploy-demo",
]
