[project]
name = "deploy-demo"
version = "0.1.0"
description = "YOLOv26 OBB Military Aircraft Detection Gradio Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.19.0",
    "numpy>=1.24.0",
    "opencv-python>=4.7.0",
    "pillow>=9.0.0",
    "ultralytics>=8.4.80",
]
